Revise portfolio layout and add new content sections
Added new sections for projects, coursework, and resume download.

--- a/index.html
+++ b/index.html
@@ -1,103 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lauren's Portfolio</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fff0f5;
-      color: #1a1a1a;
-    }
-
-    header {
-      background-color: #800020;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
-    }
-
-    section {
-      padding: 2rem;
-      max-width: 900px;
-      margin: auto;
-    }
-
-    .card {
-      background-color: white;
-      border-left: 5px solid #800020;
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      border-radius: 6px;
-    }
-
-    .card h3 {
-      margin-top: 0;
-      color: #800020;
-    }
-
-    .card a {
-      color: #800020;
-      text-decoration: none;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: #800020;
-      color: white;
-      margin-top: 2rem;
-    }
-
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2rem;
-      }
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <h1>Lauren's Portfolio</h1>
-    <p>Software & Cloud Engineering | AI Infrastructure | Future Swiss Tech Leader 🇨🇭</p>
-  </header>
-
-  <section>
-    <div class="card">
-      <h3>💻 LeetCode Solutions</h3>
-      <p>Efficient, clean C# solutions to classic algorithm problems.</p>
-      <a href="https://github.com/yltucker10/leetcode-solutions" target="_blank">View on GitHub →</a>
-    </div>
-
-    <div class="card">
-      <h3>📊 Excel & PowerPoint Projects</h3>
-      <p>Advanced data analysis and presentation formatting using PivotTables, charts, and transitions.</p>
-      <a href="#">Coming soon</a>
-    </div>
-
-    <div class="card">
-      <h3>🌐 About Me</h3>
-      <p>I'm a Computer Science student eager to learn and build my skills.</p>
-      </div>
+<main>
+  <section class="card">
+    <h2>💻 Projects</h2>
+    <p>As a Computer Science student, I’ve begun building a foundation in programming, problem-solving, and technical thinking. This portfolio showcases my early work, including algorithm challenges and academic projects that reflect my growth and curiosity.</p>
+    <a href="https://github.com/yourusername/leetcode-solutions" target="_blank">View LeetCode Solutions →</a>
   </section>
 
-  <footer>
-    © 2025 Lauren
-  </footer>
+  <section class="card">
+    <h2>📚 Coursework & Learning</h2>
+    <p>I’m currently exploring core topics like data structures, object-oriented programming, and web development. I’m also expanding my understanding of software engineering principles and modern technologies through hands-on practice and personal study.</p>
+  </section>
 
-</body>
-</html>
+  <section class="card">
+    <h2>🌐 About Me</h2>
+    <p>I’m a junior Computer Science major with a deep interest in technology and a strong desire to learn. I’m actively building my skills through coursework, coding challenges, and personal projects. I’m excited to contribute, grow, and collaborate in the tech industry.</p>
+  </section>
+
+  <section class="card">
+    <h2>📄 Resume</h2>
+    <p>Download my resume or reach out for collaboration opportunities.</p>
+    <a href="resume.pdf" download>Download Resume</a>
+  </section>
+</main>
