--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <main>
   <section class="card">
-    <h2>💻 Projects</h2>
+    <h2>Projects</h2>
     <p>As a Computer Science student, I’ve begun building a foundation in programming, problem-solving, and technical thinking. This portfolio showcases my early work, including algorithm challenges and academic projects that reflect my growth and curiosity.</p>
     <a href="https://github.com/yourusername/leetcode-solutions" target="_blank">View LeetCode Solutions →</a>
   </section>
 
   <section class="card">
-    <h2>📚 Coursework & Learning</h2>
+    <h2>Coursework & Learning</h2>
     <p>I’m currently exploring core topics like data structures, object-oriented programming, and web development. I’m also expanding my understanding of software engineering principles and modern technologies through hands-on practice and personal study.</p>
   </section>
 
   <section class="card">
-    <h2>🌐 About Me</h2>
+    <h2>About Me</h2>
     <p>I’m a junior Computer Science major with a deep interest in technology and a strong desire to learn. I’m actively building my skills through coursework, coding challenges, and personal projects. I’m excited to contribute, grow, and collaborate in the tech industry.</p>
   </section>
 
   <section class="card">
-    <h2>📄 Resume</h2>
+    <h2>Resume</h2>
     <p>Download my resume or reach out for collaboration opportunities.</p>
     <a href="resume.pdf" download>Download Resume</a>
   </section>
