Update GitHub link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <section class="card">
     <h2>Projects</h2>
     <p>As a Computer Science student, I’ve begun building a foundation in programming, problem-solving, and technical thinking. This portfolio showcases my early work, including algorithm challenges and academic projects that reflect my growth and curiosity.</p>
-    <a href="https://github.com/yourusername/leetcode-solutions" target="_blank">View LeetCode Solutions →</a>
+    <a href="https://github.com/ltucker10/projects" target="_blank">View LeetCode Solutions →</a>
   </section>
 
   <section class="card">
