--- a/index.html
+++ b/index.html
@@ -1,23 +1,149 @@
-<main>
-  <section class="card">
-    <h2>Projects</h2>
-    <p>As a Computer Science student, I’ve begun building a foundation in programming, problem-solving, and technical thinking. This portfolio showcases my early work, including algorithm challenges and academic projects that reflect my growth and curiosity.</p>
-    <a href="https://github.com/ltucker10">View Projects →</a>
-  </section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Lauren's Portfolio</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500&family=Raleway:wght@300;400;600&display=swap');
 
-  <section class="card">
-    <h2>Coursework & Learning</h2>
-    <p>I’m currently exploring core topics like data structures, object-oriented programming, and web development. I’m also expanding my understanding of software engineering principles and modern technologies through hands-on practice and personal study.</p>
-  </section>
+    body {
+      margin: 0;
+      font-family: 'Raleway', sans-serif;
+      background-color: #fff0f5;
+      color: #2c2c2c;
+      line-height: 1.7;
+    }
 
-  <section class="card">
-    <h2>About Me</h2>
-    <p>I’m a junior Computer Science major with a deep interest in technology and a strong desire to learn. I’m actively building my skills through coursework, coding challenges, and personal projects. I’m excited to contribute, grow, and collaborate in the tech industry.</p>
-  </section>
+    header {
+      background-color: #800020;
+      color: white;
+      padding: 3rem 2rem;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
 
-  <section class="card">
-    <h2>Resume</h2>
-    <p>Download my resume or reach out for collaboration opportunities.</p>
-    <a href="resume.pdf" download>Download Resume</a>
-  </section>
-</main>
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 3.5rem;
+      margin: 0;
+      letter-spacing: 1px;
+    }
+
+    header p {
+      font-size: 1.3rem;
+      font-style: italic;
+      margin-top: 0.8rem;
+      color: #ffe4e1;
+    }
+
+    main {
+      padding: 3rem 2rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    .card {
+      background-color: white;
+      border-left: 6px solid #800020;
+      padding: 2rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.08);
+      border-radius: 10px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 10px 24px rgba(0,0,0,0.12);
+    }
+
+    .card h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+      margin-top: 0;
+      color: #800020;
+    }
+
+    .card p {
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
+    }
+
+    .card a {
+      color: #800020;
+      text-decoration: none;
+      font-weight: 600;
+      border-bottom: 2px solid #800020;
+      transition: color 0.3s ease, border-color 0.3s ease;
+    }
+
+    .card a:hover {
+      color: #b22222;
+      border-color: #b22222;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background-color: #800020;
+      color: white;
+      font-size: 0.95rem;
+      font-family: 'Raleway', sans-serif;
+      letter-spacing: 0.5px;
+      margin-top: 3rem;
+      box-shadow: 0 -4px 12px rgba(0,0,0,0.05);
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2.5rem;
+      }
+
+      .card h2 {
+        font-size: 1.6rem;
+      }
+
+      main {
+        padding: 2rem 1rem;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Lauren</h1>
+    <p>Computer Science Student | Eager to Learn | Building My Future in Tech</p>
+  </header>
+
+  <main>
+    <section class="card">
+      <h2>Projects</h2>
+      <p>As a Computer Science student, I’ve begun building a foundation in programming, problem-solving, and technical thinking. This portfolio showcases my early work, including algorithm challenges and academic projects that reflect my growth and curiosity.</p>
+      <a href="https://github.com/ltucker10">View Projects →</a>
+    </section>
+
+    <section class="card">
+      <h2>Coursework & Learning</h2>
+      <p>I’m currently exploring core topics like data structures, object-oriented programming, and web development. I’m also expanding my understanding of software engineering principles and modern technologies through hands-on practice and personal study.</p>
+    </section>
+
+    <section class="card">
+      <h2>About Me</h2>
+      <p>I’m a junior Computer Science major with a deep interest in technology and a strong desire to learn. I’m actively building my skills through coursework, coding challenges, and personal projects. I’m excited to contribute, grow, and collaborate in the tech industry.</p>
+    </section>
+
+    <section class="card">
+      <h2>Resume</h2>
+      <p>Download my resume or reach out for collaboration opportunities.</p>
+      <a href="resume.pdf" download>Download Resume</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Lauren | Built with 💖 in baby pink & burgundy</p>
+  </footer>
+
+</body>
+</html>
