--- a/index.html
+++ b/index.html
@@ -4,111 +4,113 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lauren's Portfolio</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500&family=Raleway:wght@300;400;600&display=swap');
+ <style>
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500&family=Raleway:wght@300;400;600&display=swap');
 
-    body {
-      margin: 0;
-      font-family: 'Raleway', sans-serif;
-      background-color: #fff0f5;
-      color: #2c2c2c;
-      line-height: 1.7;
-    }
+body {
+  margin: 0;
+  font-family: 'Raleway', sans-serif;
+  background-color: #fff0f5; /* baby pink */
+  color: #2c2c2c;
+  line-height: 1.7;
+}
 
-    header {
-      background-color: #800020;
-      color: white;
-      padding: 3rem 2rem;
-      text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
+header {
+  background-color: #3b2f2f; /* dark espresso brown */
+  color: white;
+  padding: 3rem 2rem;
+  text-align: center;
+  box-shadow: 0 6px 16px rgba(0,0,0,0.1);
+  border-bottom: 4px solid #d8a7a7;
+}
 
-    header h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 3.5rem;
-      margin: 0;
-      letter-spacing: 1px;
-    }
+header h1 {
+  font-family: 'Playfair Display', serif;
+  font-size: 3.5rem;
+  margin: 0;
+  letter-spacing: 1px;
+}
 
-    header p {
-      font-size: 1.3rem;
-      font-style: italic;
-      margin-top: 0.8rem;
-      color: #ffe4e1;
-    }
+header p {
+  font-size: 1.3rem;
+  font-style: italic;
+  margin-top: 0.8rem;
+  color: #ffe4e1;
+}
 
-    main {
-      padding: 3rem 2rem;
-      max-width: 1000px;
-      margin: auto;
-    }
+main {
+  padding: 3rem 2rem;
+  max-width: 1000px;
+  margin: auto;
+}
 
-    .card {
-      background-color: white;
-      border-left: 6px solid #800020;
-      padding: 2rem;
-      margin-bottom: 2rem;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.08);
-      border-radius: 10px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
+.card {
+  background-color: white;
+  border-left: 6px solid #3b2f2f;
+  padding: 2rem;
+  margin-bottom: 2rem;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+  border-radius: 12px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
-    .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 10px 24px rgba(0,0,0,0.12);
-    }
+.card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 12px 28px rgba(0,0,0,0.12);
+}
 
-    .card h2 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2rem;
-      margin-top: 0;
-      color: #800020;
-    }
+.card h2 {
+  font-family: 'Playfair Display', serif;
+  font-size: 2rem;
+  margin-top: 0;
+  color: #3b2f2f;
+}
 
-    .card p {
-      font-size: 1.1rem;
-      margin-bottom: 1rem;
-    }
+.card p {
+  font-size: 1.1rem;
+  margin-bottom: 1rem;
+}
 
-    .card a {
-      color: #800020;
-      text-decoration: none;
-      font-weight: 600;
-      border-bottom: 2px solid #800020;
-      transition: color 0.3s ease, border-color 0.3s ease;
-    }
+.card a {
+  color: #3b2f2f;
+  text-decoration: none;
+  font-weight: 600;
+  border-bottom: 2px solid #3b2f2f;
+  transition: color 0.3s ease, border-color 0.3s ease;
+}
 
-    .card a:hover {
-      color: #b22222;
-      border-color: #b22222;
-    }
+.card a:hover {
+  color: #5a3e3e;
+  border-color: #5a3e3e;
+}
 
-    footer {
-      text-align: center;
-      padding: 2rem;
-      background-color: #800020;
-      color: white;
-      font-size: 0.95rem;
-      font-family: 'Raleway', sans-serif;
-      letter-spacing: 0.5px;
-      margin-top: 3rem;
-      box-shadow: 0 -4px 12px rgba(0,0,0,0.05);
-    }
+footer {
+  text-align: center;
+  padding: 2rem;
+  background-color: #3b2f2f;
+  color: white;
+  font-size: 0.95rem;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 0.5px;
+  margin-top: 3rem;
+  box-shadow: 0 -4px 12px rgba(0,0,0,0.05);
+  border-top: 4px solid #d8a7a7;
+}
 
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2.5rem;
-      }
+@media (max-width: 600px) {
+  header h1 {
+    font-size: 2.5rem;
+  }
 
-      .card h2 {
-        font-size: 1.6rem;
-      }
+  .card h2 {
+    font-size: 1.6rem;
+  }
 
-      main {
-        padding: 2rem 1rem;
-      }
-    }
-  </style>
+  main {
+    padding: 2rem 1rem;
+  }
+}
+</style>
 </head>
 <body>
 
