Change header background color to a darker shade

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
 }
 
 header {
-  background-color: #3b2f2f; /* dark espresso brown */
+  background-color: #2b1b17; /* dark espresso brown */
   color: white;
   padding: 3rem 2rem;
   text-align: center;
