Update portfolio title and color scheme

--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lauren's Portfolio</title>
+  <title>Lauren Tucker's Portfolio</title>
  <style>
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500&family=Raleway:wght@300;400;600&display=swap');
 
 body {
   margin: 0;
   font-family: 'Raleway', sans-serif;
-  background-color: #fff0f5; /* baby pink */
-  color: #2c2c2c;
+  background-color: #FFF0F5; /* baby pink */
+  color: #2C2323;
   line-height: 1.7;
 }
 
 header {
-  background-color: #2b1b17; /* dark espresso brown */
-  color: white;
+  background-color: #2C2323;
+  color: #FFF0F5;
   padding: 3rem 2rem;
   text-align: center;
-  box-shadow: 0 6px 16px rgba(0,0,0,0.1);
-  border-bottom: 4px solid #d8a7a7;
+  box-shadow: 0 6px 16px rgba(44,35,35,0.3);
+  border-bottom: 3px solid #FFF0F5;
 }
 
 header h1 {
@@ -35,7 +35,7 @@ header p {
   font-size: 1.3rem;
   font-style: italic;
   margin-top: 0.8rem;
-  color: #ffe4e1;
+  color: #FFF0F5;
 }
 
 main {
@@ -45,25 +45,25 @@ main {
 }
 
 .card {
-  background-color: white;
-  border-left: 6px solid #3b2f2f;
+  background-color: #FFF0F5;
+  border-left: 6px solid #2C2323;
   padding: 2rem;
   margin-bottom: 2rem;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+  box-shadow: 0 8px 20px rgba(44,35,35,0.15);
   border-radius: 12px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .card:hover {
   transform: translateY(-6px);
-  box-shadow: 0 12px 28px rgba(0,0,0,0.12);
+  box-shadow: 0 12px 28px rgba(44,35,35,0.25);
 }
 
 .card h2 {
   font-family: 'Playfair Display', serif;
   font-size: 2rem;
   margin-top: 0;
-  color: #3b2f2f;
+  color: #2C2323;
 }
 
 .card p {
@@ -72,29 +72,29 @@ main {
 }
 
 .card a {
-  color: #3b2f2f;
+  color: #2C2323;
   text-decoration: none;
   font-weight: 600;
-  border-bottom: 2px solid #3b2f2f;
+  border-bottom: 2px solid #2C2323;
   transition: color 0.3s ease, border-color 0.3s ease;
 }
 
 .card a:hover {
-  color: #5a3e3e;
-  border-color: #5a3e3e;
+  color: #4A3A3A;
+  border-color: #4A3A3A;
 }
 
 footer {
   text-align: center;
   padding: 2rem;
-  background-color: #3b2f2f;
-  color: white;
+  background-color: #2C2323;
+  color: #FFF0F5;
   font-size: 0.95rem;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 0.5px;
   margin-top: 3rem;
-  box-shadow: 0 -4px 12px rgba(0,0,0,0.05);
-  border-top: 4px solid #d8a7a7;
+  box-shadow: 0 -4px 12px rgba(44,35,35,0.1);
+  border-top: 3px solid #FFF0F5;
 }
 
 @media (max-width: 600px) {
