Update footer text to remove color description
Removed the color description from the footer.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ footer {
   </main>
 
   <footer>
-    <p>© 2025 Lauren | Built with 💖 in baby pink & burgundy</p>
+    <p>© 2025 Lauren</p>
   </footer>
 
 </body>
