--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body {
   margin: 0;
   font-family: 'Raleway', sans-serif;
-  background-color: #FFF0F5; /* baby pink */
+  background-color: #FFCCDC; /* baby pink */
   color: #2C2323;
   line-height: 1.7;
 }
@@ -21,7 +21,7 @@ header {
   padding: 3rem 2rem;
   text-align: center;
   box-shadow: 0 6px 16px rgba(44,35,35,0.3);
-  border-bottom: 3px solid #FFF0F5;
+  border-bottom: 3px solid #FFCCDC;
 }
 
 header h1 {
@@ -35,7 +35,7 @@ header p {
   font-size: 1.3rem;
   font-style: italic;
   margin-top: 0.8rem;
-  color: #FFF0F5;
+  color: #FFCCDC;
 }
 
 main {
@@ -45,7 +45,7 @@ main {
 }
 
 .card {
-  background-color: #FFF0F5;
+  background-color: #FFCCDC;
   border-left: 6px solid #2C2323;
   padding: 2rem;
   margin-bottom: 2rem;
@@ -88,7 +88,7 @@ footer {
   text-align: center;
   padding: 2rem;
   background-color: #2C2323;
-  color: #FFF0F5;
+  color: #FFCCDC;
   font-size: 0.95rem;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 0.5px;
