Update header to include full name

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ footer {
 <body>
 
   <header>
-    <h1>Lauren</h1>
+    <h1>Lauren Tucker</h1>
     <p>Computer Science Student | Eager to Learn | Building My Future in Tech</p>
   </header>
 
